variable suggestions added

--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
@@ -11,7 +11,10 @@
 					</mat-expansion-panel-header>
 
 
-					<div class="tree">    
+					<div class="tree">
+						<datalist id="variable-suggestions" >
+						    <option *ngFor='let v of _variableList' value="{{v}}"></option>
+						</datalist>
 
 						<tree-root #tree 	
 									[nodes]='_procedureArr' 
@@ -41,7 +44,8 @@
 													<div class='procedure-item'>
 														<input matInput class="tree-input" 
 														[(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
-														(change)="updateProcedure($event, prod, 'left')" spellcheck="false">
+														(change)="updateProcedure($event, prod, 'left')" spellcheck="false" list="variable-suggestions">
+														
 
 														<!-- <input width=50 class="tree-input" [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
 														(change)="updateProcedure($event, prod, 'left')"> -->
@@ -49,7 +53,7 @@
 											
 														<input matInput class="tree-input" 
 														[(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required
-														(change)="updateProcedure($event, prod, 'right')" spellcheck="false">
+														(change)="updateProcedure($event, prod, 'right')" spellcheck="false" list="variable-suggestions">
 
 														<!-- <input width=50 class="tree-input" [(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required
 														(change)="updateProcedure($event, prod, 'right')"> -->
@@ -80,7 +84,7 @@
 													 <span>for (</span> 
 													  <input matInput class="tree-input"  [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'left')" spellcheck="false">
 													 <span>in</span>  
-													  <input matInput class="tree-input" [(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'right')" spellcheck="false"> 
+													  <input matInput class="tree-input" [(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'right')" spellcheck="false" list="variable-suggestions"> 
 													  )
 													</div>
 												</div>
@@ -88,7 +92,7 @@
 												<div *ngIf="prod.data.getType() == 'Action'">
 													<div class='procedure-item'>
 														<input matInput class="tree-input" [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
-														(change)="updateProcedure($event, prod, 'left')" spellcheck="false">
+														(change)="updateProcedure($event, prod, 'left')" spellcheck="false" list="variable-suggestions">
 														
 
 														<span class="equal">=</span>
@@ -105,7 +109,8 @@
 																	 [(ngModel)]="prod.data.getRightComponent().params[i].value"
 																	 #ctrl="ngModel" 
 																	 required
-																	 (change)="updateProcedure($event, prod, 'right')" spellcheck="false">
+																	 (change)="updateProcedure($event, prod, 'right')" spellcheck="false" 
+																	 list="variable-suggestions">
 
 																	<span *ngIf='i<prod.data.getRightComponent().params.length-1'>,</span>
 																	<!-- <input width=50 class="tree-input" [(ngModel)]="p" 
