--- a/src/app/ui-components/viewers/text-viewer/text-viewer.component.html
+++ b/src/app/ui-components/viewers/text-viewer/text-viewer.component.html
@@ -18,7 +18,7 @@
 					</mat-panel-description>
 				</mat-expansion-panel-header>
 
-				<p>{{ output.getValue() }}</p>
+				<p>{{ getType(output) }}</p>
 
 			</mat-expansion-panel>
 			
