--- a/src/app/ui-components/help/help-viewer/help-viewer.component.scss
+++ b/src/app/ui-components/help/help-viewer/help-viewer.component.scss
@@ -68,6 +68,7 @@ mat-panel-description{
 
 .content{
 	width: 100%;
+	text-align: left !important;
 	.head-descr{
 		margin-bottom: $fsize2;
 		font-size: $fsize2;
