--- a/src/app/ui-components/help/help-viewer/help-viewer.component.html
+++ b/src/app/ui-components/help/help-viewer/help-viewer.component.html
@@ -60,7 +60,7 @@
 		<h4>Module: {{fnObj.module}}</h4>
 		<h3>{{fnObj.name}}</h3>
 		
-		<div>
+		<div *ngIf='fnObj.content'>
 			{{fnObj.content.signatures[0].comment.shortText}}
 			Returns: {{fnObj.content.signatures[0].comment.returns}}
 				<a href="https://phtj.github.io/gs-modelling/docs/modules/{{getUrl(fnObj.module, fnObj.name)}}" target="_blank">
