--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,7 @@ split-area{
 
 split-gutter{
 	border-right: 1px solid $color2 !important;
+	border-top: 1px solid $color2 !important;
 }
 
 .mat-tab-label{
@@ -426,7 +427,66 @@ mat-dialog-container{
     border: 1px solid $pcolor3 !important;
 }
 
+split-area{
+	div{
+		#splittoolwindow{
+		    height: 100%;
+		    overflow-y: auto;
 
+		    box-sizing: border-box;
+		    padding-bottom: $header-height;
+		    #toolwindow{
+		      	#toolbar{
+		      		background-color: $color3;
+			        height: $header-height;
+
+			        display: flex;
+			        flex-flow: row nowrap;
+			        justify-content: space-between;
+			        width: 100%;
+			        .sec1, .sec2, .sec3{
+						display: flex;
+						flex-flow: row nowrap;
+						margin: 0;
+						button{
+							font-size: $fsize2;
+							margin: 0;
+						}
+			        }
+
+			        .sec1{
+			        	display: flex;
+			        	flex-flow: row nowrap;
+			        	justify-content: flex-start;
+			        }
+			        .sec2{
+			        	display: flex;
+			        	flex-flow: row nowrap;
+			        	
+			        	align-items: center;
+			        	justify-content: center;
+
+			        	padding: 0px 5px;
+
+						label{
+							margin:0;
+							white-space: nowrap;
+							font-size: $fsize2;
+						}
+						input{
+							margin: 0;
+						}
+			        }
+			        .sec3{
+			        	display: flex;
+			        	flex-flow: row nowrap;
+			        	justify-content: flex-end;
+			        }
+			    }
+		    }
+		}
+	}
+}
 // split-area.sidebar.flowchart{
 // 	width: 150px !important;
 // }
