--- a/src/app/ui-components/controls/modulebox/modulebox.component.html
+++ b/src/app/ui-components/controls/modulebox/modulebox.component.html
@@ -12,7 +12,7 @@
 		<mat-accordion multi="true">
 
 				<!-- inputs -->
-				<mat-expansion-panel [expanded]="true" *ngFor="let cat of _category">
+				<mat-expansion-panel [expanded]="false" *ngFor="let cat of _category">
 					
 					<mat-expansion-panel-header>
 						<mat-panel-title>
