module name updated

--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
@@ -51,11 +51,13 @@
 				
 		
 				<split-area order="2" [size]="70">
+
+						<!-- zoom -->
 				    	<div class="info-container" 
 				    		style="position: absolute; 
 				    		top: 30px; 
 				    		right: 30px">
-				    		<!-- Zoom: {{zoom}} -->
+				    		Zoom: {{zoom}}
 				    	</div>
 
 				        <!-- svg canvas to draw the edges -->
