--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -97,6 +97,7 @@ split-area{
 	
 		.node{
 			position: absolute;
+			transform-origin: top left;
 			z-index: 3;
 			margin: 0px;
 			color: $color1;
