--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
@@ -88,7 +88,8 @@
 						<!-- div container for the nodes -->
 						<div class="graph-container" 
 							id="graph-nodes" ondragover="return false" 
-							(wheel)="scale($event)">
+							(wheel)="scale($event)"
+							(mousedown)="pan($event)">
 							
 							<!-- all nodes -->
 							<div class="node-container">
