procedure line highlighting

--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
@@ -37,7 +37,7 @@
 
 						    				</div>-->
 								  			<div class = "seg1" 
-								  				[class.error]="prod.data.hasError" 
+								  				[class.error]="prod.data.getError()" 
 								  				[class.print]="prod.data.printToConsole()"
 								  				[class.disabled]="prod.data.isDisabled()">
 
