scroll console to bottom everytime

--- a/src/app/ui-components/console/console.component.html
+++ b/src/app/ui-components/console/console.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" #scrollMe>
 	<div class="btn-container">
 		<button mat-button (click)="clearConsole()"><i class="fa fa-eraser"></i></button>
 	</div>
