--- a/src/app/ui-components/console/console.component.scss
+++ b/src/app/ui-components/console/console.component.scss
@@ -1,6 +1,9 @@
 @import '~scss/globals';
 
-.container{
+.console-container{
+
+	@extend .container;
+
 	position: relative;
 	height: 100%;
 
@@ -42,8 +45,37 @@
 			// flex-flow: row wrap;
 			color: $color1 !important;
 
-			.error{
-				color: red;
+			&.error{
+				color: red !important;
+				font-weight: 300;
+				font-size: 14px;
+				padding: 5px;
+				display: inline;
+			}
+
+			&.print{
+				padding: 5px;
+
+				.console-heading{
+					font-size: 14px; 
+					line-height: 20px;
+					text-decoration: underline;
+					color: blue;
+				}
+					
+				.console-line{
+
+					.var-name{
+						color: purple;
+					}
+
+					.var-value{
+						font-weight: 600;
+						color: green;
+					}
+					
+				}
+
 			}
 
 		}
@@ -89,4 +121,3 @@
 		position: fixed;
 	}
 }
-
