--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -163,7 +163,7 @@ split-area{
 					min-width: 70px;
 					width: auto;
 					border: 1px solid $color1;
-					background-color: white;
+					background-color: rgba(255, 255, 255, 0.7);
 					cursor: move;
 
 					&.disabled{
