--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -72,6 +72,36 @@ split-area{
 		transform-origin: top left;
 	}
 
+	.info-container{
+		padding: 0px 30px; 
+		display: flex; 
+		flex-direction: row;
+		justify-content: space-between;
+
+		.info{
+			display: flex; 
+			flex-direction: column;
+
+			.label{
+				font-size: 12px;
+				font-weight: 100;
+				color: $color5;
+			}
+
+			.value{
+				color: $color1;
+				font-size: 11px;
+				font-weight: 600;
+			}
+			
+			.action{
+				cursor: pointer;
+				font-size: 11px;
+				color: $color2;
+			}
+		}
+	}
+
 	.graph-container{
 		position: absolute; 
 		//top: 0px; 
