--- a/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.html
+++ b/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.html
@@ -3,7 +3,7 @@
 	<div class="container">
 
 		<div class="default" *ngIf='_inputs == undefined || _inputs.length == 0'>
-			This node has no inputs
+			No Inputs
 		</div>
  
 		<div class='paramater-container' *ngFor="let inp of _inputs" >
