--- a/src/app/gs-viewer/setting/setting.component.html
+++ b/src/app/gs-viewer/setting/setting.component.html
@@ -3,25 +3,25 @@
   <input id="axis"  type="checkbox" [checked]="axisVisible" (click)="changeaxis()"> <label id="name" value="axisVisible">axis</label>
   <input id="shadow"  type="checkbox" [checked]="shadowVisible" (click)="changeshadow()"> <label id="name" value="shadowVisible">shadow</label>
   <input id="frame"  type="checkbox" [checked]="frameVisible" (click)="changeframe()"> <label id="name" value="frameVisible">frame</label><br/>
-  <hr/>&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >Grid Center</label><br/>
-  &nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >X</label><input type="text" name="center" id="centerx" #centerx value={{_centerx}}>
+  <hr/><label class="name" >Grid Center</label><br/>
+  <label class="name" >X</label><input type="text" name="center" id="centerx" #centerx value={{_centerx}}>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >Y</label><input type="text" name="center" #centery id="centery" value={{_centery}}>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >Z</label><input type="text" name="center"  #centerz id="centerz" value={{_centerz}}>
   <button (click)="changecenter(centerx.value,centery.value,centerz.value)">Set</button>
   <!-- <hr/>&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >Raycaster Precision</label>&nbsp;&nbsp;<br/>-->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >Line Precision</label>
+  <label class="name" >Line Precision</label>
   <mat-slider class="slider" name="range" id="linerange" min=0 max=1 step=0.01  value={{_linepre}} #linepre (change)="changeline(linepre.value)" ></mat-slider><label id="name" >{{linepre.value.toPrecision(2)}}</label><br/>
   <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >Point Precision</label>
   <mat-slider class="slider" name="range" id="pointrange" min=0 max=1 step=0.01  value={{_pointpre}} #pointpre (change)="changepoint(pointpre.value)" ></mat-slider><label id="name" >{{pointpre.value.toPrecision(2)}}</label><br/> -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >Points Size</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <label class="name" >Points Size</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <mat-slider class="slider" name="range" id="sizerange" min=0 max=5 step=0.1  value={{_pointsize}} #pointsize (change)="changepointsize(pointsize.value)" ></mat-slider><label id="name" >{{pointsize.value.toPrecision(2)}}</label><br/>
 
-  <hr/>&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >Hemisphere Light</label>&nbsp;&nbsp;<br/>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >hue</label>
+  <hr/><label class="name" >Hemisphere Light</label>&nbsp;&nbsp;<br/>
+  &nbsp;&nbsp;&nbsp;<label class="name" >hue</label>
   <mat-slider class="slider" name="range" id="huerange" min=0 max=360 step=1  value={{hue}} #slider (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><label id="name" >{{slider.value}}</label><br/>
-  &nbsp;&nbsp;&nbsp;<label id="name" >saturation</label>
+  <label class="name" >saturation</label>
   <mat-slider name="range" id="satrange" min=0 max=1 step=0.01 value={{saturation}} #slider1 (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><label id="name" >{{slider1.value.toPrecision(2)}}</label><br/>
-  &nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >lightness</label>
+  <label class="name" >lightness</label>
   <mat-slider name="range" id="lirange" min=0 max=1 step=0.01 value={{lightness}} #slider2 (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><label id="name" >{{slider2.value.toPrecision(2)}}</label><br/>
   <!-- &nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >opacity</label>&nbsp;&nbsp;&nbsp;
   <mat-slider name="range" id="oprange" min=0 max=1 step=0.01 value={{opacity}} #slider3 (change)="changeopa(slider3.value)" ></mat-slider><label id="name" >{{slider3.value.toPrecision(2)}}</label><br/> -->
