--- a/src/app/ui-components/viewers/geometry-viewer/geometry-viewer.component.scss
+++ b/src/app/ui-components/viewers/geometry-viewer/geometry-viewer.component.scss
@@ -10,6 +10,15 @@
 		height: 100%; 
 		width: 100%;
 
+		.default{
+			position: absolute;
+			height: 100%; 
+			width: 100%; 
+			color: #222; 
+			background-color: rgba(255, 255, 255, 0.3);
+			z-index: 100;
+		}
+
 		#app-geometry-viewer{
 			height: 100%; 
 			width: 100%;
