--- a/src/app/gs-viewer/viewer/viewer.component.html
+++ b/src/app/gs-viewer/viewer/viewer.component.html
@@ -42,13 +42,13 @@
         <td  align=center width="40%">{{renderer.info.render.faces}}</td>
         </tr>
         <tr>
-        <td  align=center width="50%">Points</td>
-        <td  align=center width="40%">{{renderer.info.render.points}}</td>
+        <td  align=center width="50%">Lines</td>
+        <td  align=center width="40%">{{LineNo}}</td>
         </tr>
-        <tr>
+        <!-- <tr>
         <td  align=center width="50%">Vertices</td>
         <td  align=center width="40%">{{renderer.info.render.vertices}}</td>
-        </tr>
+        </tr> -->
       </div>
 
       	
