--- a/src/app/gs-viewer/setting/setting.component.html
+++ b/src/app/gs-viewer/setting/setting.component.html
@@ -6,10 +6,10 @@
   <input id="nomal"  type="checkbox" [checked]="normalVisible" (click)="changenormal()"> <label id="name" value="nomalVisible">nomal</label><br/>
   
   <hr/><label class="name" >Grid Center</label><br/>
-  <label class="name" >X</label><input type="text" name="center" id="centerx" #centerx value={{_centerx}}>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >Y</label><input type="text" name="center" #centery id="centery" value={{_centery}}>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >Z</label><input type="text" name="center"  #centerz id="centerz" value={{_centerz}}>
-  <button (click)="changecenter(centerx.value,centery.value,centerz.value)">Set</button>
+  <label class="name" >X</label><input type="text" name="center" id="centerx" #centerx value={{_centerx}} (change)=changecenter(centerx.value,centery.value,centerz.value)>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >Y</label><input type="text" name="center" #centery id="centery" value={{_centery}} (change)=changecenter(centerx.value,centery.value,centerz.value)>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >Z</label><input type="text" name="center"  #centerz id="centerz" value={{_centerz}} (change)=changecenter(centerx.value,centery.value,centerz.value)><br/>
+  <!--< button (click)="changecenter(centerx.value,centery.value,centerz.value)">Set</button> -->
   <!-- <hr/>&nbsp;&nbsp;&nbsp;&nbsp;<label id="name" >Raycaster Precision</label>&nbsp;&nbsp;<br/>-->
   <label class="name" >Line Precision</label>
   <mat-slider class="slider" name="range" id="linerange" min=0 max=1 step=0.01  value={{_linepre}} #linepre (change)="changeline(linepre.value)" ></mat-slider><label id="name" >{{linepre.value.toPrecision(2)}}</label><br/>
@@ -19,8 +19,8 @@
   <mat-slider class="slider" name="range" id="sizerange" min=0 max=5 step=0.1  value={{_pointsize}} #pointsize (change)="changepointsize(pointsize.value)" ></mat-slider><label id="name" >{{pointsize.value.toPrecision(2)}}</label><br/>
 
   <hr/><label class="name" >Hemisphere Light</label>&nbsp;&nbsp;<br/>
-  &nbsp;&nbsp;&nbsp;<label class="name" >hue</label>
-  <mat-slider class="slider" name="range" id="huerange" min=0 max=360 step=1  value={{hue}} #slider (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><label id="name" >{{slider.value}}</label><br/>
+  <label class="name" >hue</label>&nbsp;&nbsp;&nbsp;
+  <mat-slider class="slider" name="range" id="huerange" min=0 max=1 step=0.01  value={{hue}} #slider (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><label id="name" >{{slider.value.toPrecision(2)}}</label><br/>
   <label class="name" >saturation</label>
   <mat-slider name="range" id="satrange" min=0 max=1 step=0.01 value={{saturation}} #slider1 (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><label id="name" >{{slider1.value.toPrecision(2)}}</label><br/>
   <label class="name" >lightness</label>
