--- a/src/app/gs-viewer/viewer/viewer.component.html
+++ b/src/app/gs-viewer/viewer/viewer.component.html
@@ -38,11 +38,11 @@
       <button id="selecting" [class.selected]="seVisible" (click)= "select(seVisible)" ><i class="fa fa-mouse-pointer"></i></button>
       <div id="shownumber">
         <tr>
-        <td  align=center width="50%">Triangles</td>
+        <td  align=left width="60%">Triangles</td>
         <td  align=center width="40%">{{renderer.info.render.faces}}</td>
         </tr>
         <tr>
-        <td  align=center width="50%">Lines</td>
+        <td  align=left width="60%" >Lines</td>
         <td  align=center width="40%">{{LineNo}}</td>
         </tr>
         <!-- <tr>
