--- a/src/app/gs-viewer/viewer/viewer.component.css
+++ b/src/app/gs-viewer/viewer/viewer.component.css
@@ -5,15 +5,18 @@
   margin:0px;
   overflow: hidden;
   color: white;
+  font-family:sans-serif;
 }
 #container-top-right-resize { top: 0px; right: 0px; }
 #shownumber{
   position: absolute;
+  float: right;
   color:black;
   right: 0px;
-  width: 130px;
+  width: 115px;
   bottom: 0px;
   color:#395d73;
+  font-family:sans-serif;
 }
 /*#rotating{
   width: 30px;
@@ -58,7 +61,7 @@
   right:0px; 
   text-align:center;
   position: absolute;
-  margin-top: 35px;
+  margin-top: 10px;
   background-color:transparent;
   border:0;
 }
@@ -70,7 +73,7 @@
   right:0px; 
   text-align:center;
   position: absolute;
-  margin-top: 60px;
+  margin-top: 35px;
   background-color:transparent;
   border:0;
 }
@@ -82,7 +85,7 @@
   right:0px; 
   text-align:center;
   position: absolute;
-  margin-top: 95px;
+  margin-top: 70px;
   background-color:transparent;
   border:0;
   font-family:sans-serif;
@@ -94,7 +97,7 @@
   right:0px; 
   text-align:center;
   position: absolute;
-  margin-top: 120px;
+  margin-top: 95px;
   background-color:transparent;
   border:0;
   font-family:sans-serif;
@@ -106,7 +109,7 @@
   right:0px; 
   text-align:center;
   position: absolute;
-  margin-top: 145px;
+  margin-top: 120px;
   background-color:transparent;
   border:0;
   font-family:sans-serif;
@@ -118,7 +121,7 @@
   right:0px; 
   text-align:center;
   position: absolute;
-  margin-top: 170px;
+  margin-top: 145px;
   background-color:transparent;
   border:0;
   font-family:sans-serif;
@@ -130,7 +133,7 @@
   right:0px; 
   text-align:center;
   position: absolute;
-  margin-top: 195px;
+  margin-top: 170px;
   background-color:transparent;
   border:0;
   font-family:sans-serif;
@@ -142,7 +145,7 @@
   right:0px; 
   text-align:center;
   position: absolute;
-  margin-top: 220px;
+  margin-top: 195px;
   background-color:transparent;
   border:0;
   font-family:sans-serif;
