--- a/src/styles.scss
+++ b/src/styles.scss
@@ -426,6 +426,10 @@ mat-dialog-container{
     border: 1px solid $pcolor3 !important;
 }
 
+.mat-slider{
+	width: 80% !important;
+}
+
 split-area{
 	div{
 		#splittoolwindow{
